# MediaMind

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_mediamind.sh  setup.cfg  setup.py
.github/workflows/: ci.yml
src/mediamind/: __init__.py  __main__.py  audio_processor.py  exceptions.py  summarizer.py  transcriber.py
tests/: conftest.py  test_audio_processor.py  test_main.py  test_summarizer.py  test_transcriber.py
