[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mediamind"
version = "0.1.0"
authors = [
  { name = "MediaMind Contributors" },
]
description = "AI-powered media transcription and summarization tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mediamind"
"Bug Tracker" = "https://github.com/yourusername/mediamind/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
